Remove compaction properties and drop down number of compactors

--- a/assemble/conf/accumulo.properties
+++ b/assemble/conf/accumulo.properties
@@ -31,3 +31,8 @@ instance.secret=DEFAULT
 
 ## Set to false if 'accumulo-util build-native' fails
 tserver.memory.maps.native.enabled=true
+
+## Defines default compaction service
+compaction.service.default.planner=org.apache.accumulo.core.spi.compaction.DefaultCompactionPlanner.java
+compaction.service.default.planner.opts.maxOpen=10
+compaction.service.default.planner.opts.groups=[{"name":"defaultSmall","maxSize":"128M"}, {"name":"defaultLarge"}]
