--- a/pom.xml
+++ b/pom.xml
@@ -240,11 +240,6 @@
         <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>com.beust</groupId>
-        <artifactId>jcommander</artifactId>
-        <version>1.82</version>
-      </dependency>
-      <dependency>
         <groupId>com.fasterxml</groupId>
         <artifactId>classmate</artifactId>
         <version>1.6.0</version>
@@ -614,6 +609,11 @@
         <groupId>org.jboss.logging</groupId>
         <artifactId>jboss-logging-processor</artifactId>
         <version>2.2.1.Final</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jcommander</groupId>
+        <artifactId>jcommander</artifactId>
+        <version>1.85</version>
       </dependency>
       <dependency>
         <groupId>org.jline</groupId>
