--- a/server/tserver/pom.xml
+++ b/server/tserver/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.apache.accumulo</groupId>
     <artifactId>accumulo-project</artifactId>
-    <version>4.0.0-SNAPSHOT</version>
+    <version>4.0.0-datawave-3</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>accumulo-tserver</artifactId>
